# knot-zephyr-source

./: CMakeLists.txt  README.rst  overlay-knot-ot.conf
src/: hello.c  knot.h  main.c  msg.c  msg.h  net.c  net.h  peripheral.c  peripheral.h  peripheral.nrf52840  peripheral.qemu  proto.c  proto.h  proxy.c  proxy.h  sm.c  sm.h  storage.c  storage.h  storage.nrf52840  storage.qemu  tcp6.c  tcp6.h
